@@ -49,6 +49,9 @@
      [sshpty.c]
      remove #if defined block not needed; ok markus@ dtucker@
      NB. RCS ID sync only
+   - stevesk@cvs.openbsd.org 2007/09/12 19:39:19
+     [umac.c]
+     use xmalloc() and xfree(); ok markus@ pvalchev@
 
 20070914
  - (dtucker) [openbsd-compat/bsd-asprintf.c] Plug mem leak in error path.
@@ -3246,4 +3249,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4753 2007/09/17 06:10:21 djm Exp $
+$Id: ChangeLog,v 1.4754 2007/09/17 06:11:01 djm Exp $
